--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -16,4 +16,6 @@
   <p> {{ form.remember_me() }} {{ form.remember_me.label }} </p>
   <p> {{ form.submit() }} </p>
 
+  <p> <a href=" {{ url_for('register') }} "> Register </a> </p>
+
 </form>
