--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,25 +1,43 @@
-{% extends "base.html" %}
+*{% extends "base.html" %}
 
 {% block content %}
-  <link rel="stylesheet" href="{{ url_for('static', filename='login.css') }}" />
-  <form action="" method="post">
-    {{ form.csrf_token }}
-    {{ form.hidden_tag() }}
 
-    <p>
-      {{ form.student_id.label }} <br>
-      {{ form.student_id }}
-    </p>
+  <head>
+    <meta charset="utf-8">
+    <title>RMIT student network</title>
+    <link rel="stylesheet" href="assets/login.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='login.css') }}" />
+  </head>
 
-    <p>
-      {{ form.password_hash.label }} <br>
-      {{ form.password_hash }}
-    </p>
+  <body>
+    <div class="col-2-3">
+          <img src="assets/picture/RMIT-logo.png" alt="RMIT logo">
+          <p>STUDENT NETWORK</p>
+    </div>
+    <div class="col-1-3">
+      <form action="" method="post">
+        {{ form.csrf_token }}
+        {{ form.hidden_tag() }}
 
-    <p> {{ form.remember_me() }} {{ form.remember_me.label }} </p>
-    <p> {{ form.submit() }} </p>
+        <fieldset class="account-info">
+          {{ form.student_id.label }} <br>
+          {{ form.student_id }}
+        </fieldset>
 
-    <p> <a href=" {{ url_for('register') }} "> Register </a> </p>
+        <fieldset class="account-info">
+          {{ form.password_hash.label }} <br>
+          {{ form.password_hash }}
+        </fieldset>
 
-  </form>
+        <fieldset  class="account-action">
+          {{ form.remember_me() }} {{ form.remember_me.label }}
+        </fieldset>
+        <fieldset> {{ form.submit() }} </fieldset>
+
+        <p> <a href=" {{ url_for('register') }} "> Register </a> </p>
+      </form>
+    </div>
+  </body>
+
 {% endblock %}
