--- a/app/templates/assets/login.css
+++ b/app/templates/assets/login.css
@@ -1,71 +1,99 @@
-/* Bordered form */
-form {
-  border: 3px solid #f1f1f1;
-}
+/* http://meyerweb.com/eric/tools/css/reset/
+   v2.0 | 20110126
+   License: none (public domain)
+*/
 
-/* Full-width inputs */
-input[type=text], input[type=password] {
-  width: 100%;
-  padding: 12px 20px;
-  margin: 8px 0;
-  display: inline-block;
-  border: 1px solid #ccc;
-  box-sizing: border-box;
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
 }
-
-/* Set a style for all buttons */
-button {
-  background-color: #4CAF50;
-  color: white;
-  padding: 14px 20px;
-  margin: 8px 0;
-  border: none;
-  cursor: pointer;
-  width: 100%;
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+	display: block;
 }
-
-/* Add a hover effect for buttons */
-button:hover {
-  opacity: 0.8;
+body {
+	line-height: 1;
 }
-
-/* Extra style for the cancel button (red) */
-.cancelbtn {
-  width: auto;
-  padding: 10px 18px;
-  background-color: #f44336;
+ol, ul {
+	list-style: none;
 }
-
-/* Center the avatar image inside this container */
-.imgcontainer {
-  text-align: center;
-  margin: 24px 0 12px 0;
+blockquote, q {
+	quotes: none;
 }
-
-/* Avatar image */
-img.avatar {
-  width: 40%;
-  border-radius: 50%;
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
 }
-
-/* Add padding to containers */
-.container {
-  padding: 16px;
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
 }
-
-/* The "Forgot password" text */
-span.psw {
-  float: right;
-  padding-top: 16px;
+.col-1-3{
+	width: 33.33%;
+	float: right;
 }
-
-/* Change styles for span and cancel button on extra small screens */
-@media screen and (max-width: 300px) {
-  span.psw {
-    display: block;
-    float: none;
-  }
-  .cancelbtn {
-    width: 100%;
-  }
+.col-2-3{
+	width: 66.66%;
+}
+.col-1-3,
+.col-2-3{
+	display: inline-block;
+}
+form{
+	width: 200px;
+}
+img{
+	height: 211px;
+	width: 600px;
+	display: block;
+	margin: 200px auto 50px auto;
+}
+.col-2-3 p{
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 58px;
+	font-weight: bold;
+	text-align: center;
+}
+.col-1-3 form{
+	border: 2px solid rgb(209, 41, 41);
+	border-radius: 5px;
+	margin: 200px auto 50px auto;
+}
+input{
+	border-radius: 5px;
+	margin-bottom: 5px;
+}
+label{
+	display: block;
+	margin-bottom: 20px;
+	font-family: Arial, Helvetica, sans-serif;
+}
+.account-info{
+	padding: 20px 10px 0px 5px;
+}
+.account-action{
+	background: grey;
+	padding: 10px;
+}
+.account-info label{
+	font-weight: bold;
+	padding: 10px;
 }
