--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -6,7 +6,7 @@
 {% for post in posts %}
 <div style="border: 1px black solid;">
     <p><b>Poster: </b>{{ post.poster_id }}</p>
-    <p><b>Post title: </b>{{ post.poster_title }}</p>
+    <p><b>Post title: </b>{{ post.post_title }}</p>
     <p><b>Message: </b>{{ post.message }}</p>
 </div>
 {% endfor %}
