--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,7 +9,7 @@
 <body>
 <div>
     RMIT Student Network:
-    <a href="{{ url_for('index') }}">Home</a>
+    <a href="{{ url_for('index') }}" style="">Home</a>
 
     {% if current_user.is_anonymous %}
     <a href="{{ url_for('login') }}">Login</a>
@@ -17,7 +17,7 @@
     <a href="{{ url_for('profile', studentid=current_user.id) }}">Profile</a>
     <a href="{{ url_for('create_post', studentid=current_user.id) }}">Create Post</a>
     <a href="{{ url_for('dashboard', studentid=current_user.id) }}">Dashboard</a>
-    <a href="{{ url_for('group', studentid=current_user.id) }}">Group</a>
+    <a href="{{ url_for('chat', studentid=current_user.id) }}">Group Chat</a>
     <a href="{{ url_for('logout') }}">Logout</a>
     {% endif %}
 
